tests/paczka1/fuzzy1/99666485.err
Error in line 2: txd5iLBPzD5 S244 17,9
Error in line 10: kXkK S244 94,9
Error in line 4: pNLr0R3rdc S244 12,3
Error in line 14: llbYhNgQ S274 28,0
Error in line 27: iYq A27 56,3
Error in line 9: S244 S274 65,0
Error in line 33: S244 A851 15,0
Error in line 28: iYq S244 64,0
